--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-	"name": "hitori",
-	"description": "WhatsApp Bot Using Lib Baileys",
-	"repository": "https://github.com/nazedev/hitori",
+	"name": "avi",
+	"description": "Prince Avi Md WhatsApp Bot Using Lib Baileys",
+	"repository": "https://github.com/avishka33/PRINCE-AVI-MD-v3",
 	"logo": "https://node-js-sample.herokuapp.com/node.png",
-	"keywords": ["whatsapp-bot", "multi-device", "bot", "whatsapp"]
+	"keywords": ["whatsapp-bot", "multi-device", "prince avi md", "Avi"]
 }
