© 𝙰𝚕𝚙𝚑𝚊 𝚅𝚒𝚜𝚒𝚘𝚗 𝙸𝚗𝚏𝚒𝚗𝚒𝚝𝚢

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "start.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node start.js",
-    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "dev": "nodemon main.js",
     "debug": "DEBUG=* node start.js"
   },
   "keywords": [
