--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "debug": "DEBUG=* node start.js"
   },
   "keywords": [
-    "whatsapp-bot",
+    "Avi-bot",
     "baileys-md",
     "bot-wa",
     "multi-device"
@@ -30,7 +30,7 @@
     "@ibaraki-douji/pixivts": "^2.4.1",
     "aki-api": "npm:@aqul/akinator-api@1.0.1",
     "awesome-phonenumber": "^4.4.0",
-   "api-dylux": "0.24.0",
+   "api-dylux": "^0.24.0",
     "axios": "^0.24.0",
     "baileys": "latest",
     "chalk": "^4.1.2",
